# ROS2_4wheel_autonomous_robot

./: README.md  build.sh
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: gazebo_params.yaml  my_controllers.yaml
src/robot_description/launch/: gazebo.launch.py  launch_sim.launch.py  launch_sim_ros_control.launch.py  robot.launch.py  rviz.launch.py  world_launch.py
src/robot_description/models/myCar/: BMW.urdf  BMW.urdf.xacro  BMW_core.xacro  camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  ros2_control.xacro
src/robot_description/models/myWorld/: boxes_world.sdf
src/robot_description/rviz/: config.rviz  nav.config.rviz  sim.config.rviz  sim_map.config.rviz
src/robot_description/src/: world.sdf
src/robot_nav/: CMakeLists.txt  package.xml
src/robot_nav/config/: nav2_params.yaml
src/robot_nav/launch/: navigation_launch.py
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_slam/config/: amcl.config.yaml  slam_toolbox_params.yaml
src/robot_slam/launch/: amcl.launch.py  mapping.launch.py
src/robot_slam/maps/: boxes_map.pgm  boxes_map.yaml  new_boxes_map.pgm  new_boxes_map.yaml  new_boxes_map_serialize.data
